@@ -27,6 +27,7 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.hbase.HRegionInfo;
 import org.apache.hadoop.hbase.Server;
+import org.apache.hadoop.hbase.TableNotDisabledException;
 import org.apache.hadoop.hbase.TableNotFoundException;
 import org.apache.hadoop.hbase.catalog.CatalogTracker;
 import org.apache.hadoop.hbase.catalog.MetaReader;
@@ -47,8 +48,9 @@ public class EnableTableHandler extends EventHandler {
   private final CatalogTracker ct;
 
   public EnableTableHandler(Server server, byte [] tableName,
-      CatalogTracker catalogTracker, AssignmentManager assignmentManager)
-  throws TableNotFoundException, IOException {
+      CatalogTracker catalogTracker, AssignmentManager assignmentManager,
+      boolean skipTableStateCheck)
+  throws TableNotFoundException, TableNotDisabledException, IOException {
     super(server, EventType.C_M_ENABLE_TABLE);
     this.tableName = tableName;
     this.tableNameStr = Bytes.toString(tableName);
@@ -57,6 +59,24 @@ public class EnableTableHandler extends EventHandler {
     // Check if table exists
     if (!MetaReader.tableExists(catalogTracker, this.tableNameStr)) {
       throw new TableNotFoundException(Bytes.toString(tableName));
+    }
+
+    // There could be multiple client requests trying to disable or enable
+    // the table at the same time. Ensure only the first request is honored
+    // After that, no other requests can be accepted until the table reaches
+    // DISABLED or ENABLED.
+    if (!skipTableStateCheck)
+    {
+      try {
+        if (!this.assignmentManager.getZKTable().checkDisabledAndSetEnablingTable
+          (this.tableNameStr)) {
+          LOG.info("Table " + tableNameStr + " isn't disabled; skipping enable");
+          throw new TableNotDisabledException(this.tableNameStr);
+        }
+      } catch (KeeperException e) {
+        throw new IOException("Unable to ensure that the table will be" +
+          " enabling because of a ZooKeeper issue", e);
+      }
     }
   }
 
@@ -83,10 +103,6 @@ public class EnableTableHandler extends EventHandler {
   }
 
   private void handleEnableTable() throws IOException, KeeperException {
-    if (this.assignmentManager.getZKTable().isEnabledTable(this.tableNameStr)) {
-      LOG.info("Table " + tableNameStr + " is already enabled; skipping enable");
-      return;
-    }
     // I could check table is disabling and if so, not enable but require
     // that user first finish disabling but that might be obnoxious.
 
@@ -121,7 +137,8 @@ public class EnableTableHandler extends EventHandler {
       }
     }
     // Flip the table to enabled.
-    if (done) this.assignmentManager.getZKTable().setEnabledTable(this.tableNameStr);
+    if (done) this.assignmentManager.getZKTable().setEnabledTable(
+      this.tableNameStr);
     LOG.info("Enabled table is done=" + done);
   }
 
@@ -131,7 +148,8 @@ public class EnableTableHandler extends EventHandler {
    * been onlined; i.e. List of regions that need onlining.
    * @throws IOException
    */
-  private List<HRegionInfo> regionsToAssign(final List<HRegionInfo> regionsInMeta)
+  private List<HRegionInfo> regionsToAssign(
+    final List<HRegionInfo> regionsInMeta)
   throws IOException {
     final List<HRegionInfo> onlineRegions =
       this.assignmentManager.getRegionsOfTable(tableName);
